# mango

./: .gitignore  README.md  mangowm.scm  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: generate-nix-options-docs.py
.github/workflows/: generate-nix-options-docs.yml  sync-wiki.yml
assets/: config.conf
docs/: ipc.md  meta.json  nix-options.md
docs/(git)/: faq.md  nix-options.md
docs/configuration/: monitors.md
docs/window-management/: layouts.md  overview.md  rules.md
nix/: hm-modules.nix  nixos-modules.nix
src/: mango.c
src/action/: client.h  monitor.h
src/animation/: client.h  tag.h
src/common/: util.c  util.h
src/config/: parse_config.h
src/dispatch/: bind_declare.h  bind_define.h
src/ext-protocol/: all.h  foreign-toplevel.h  tablet.h
src/fetch/: common.h
src/layout/: arrange.h  dwindle.h  horizontal.h  layout.h  overview.h  scroll.h  vertical.h
